--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@genkit-ai/googleai": "^1.16.1",
+		"@supabase/supabase-js": "^2.55.0",
 		"genkit": "^1.16.1"
 	}
 }
